<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        tools:context=".OrderPageTwo" android:id="@+id/order_page_two"
        android:layout_height="match_parent" android:orientation="vertical"
        android:gravity="fill_vertical">
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/attr_1"
            android:hint="@string/attr_1" android:layout_marginTop="8dp"
            android:gravity="fill_vertical"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/attr_2"
            android:inputType="text" android:hint="@string/attr_2" android:layout_marginTop="8dp"
            android:gravity="fill_vertical"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/attr_3"
            android:inputType="text" android:hint="@string/attr_3"
            android:layout_marginTop="8dp"
            android:gravity="fill_horizontal|fill_vertical"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/attr_4"
            android:inputType="text" android:hint="@string/attr_4"
            android:layout_marginTop="8dp"
            android:gravity="fill_vertical"/>
</LinearLayout>