<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OrderPageOne"
        android:id="@+id/order_page_one">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/order_date" android:id="@+id/order_date"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/gps_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/gps_location" app:layout_constraintEnd_toEndOf="@+id/order_date"
            app:layout_constraintStart_toStartOf="@+id/order_date"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/order_date"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/order_type"
            app:layout_constraintStart_toStartOf="@+id/gps_location"
            app:layout_constraintEnd_toEndOf="@+id/gps_location" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/gps_location" android:inputType="text"
            android:hint="@string/order_type"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/network_element" android:inputType="text" android:hint="@string/network_element"
            app:layout_constraintStart_toStartOf="@+id/order_type" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/order_type" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/order_type"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/location_name"
            android:inputType="text" android:hint="@string/location_name"
            app:layout_constraintStart_toStartOf="@+id/network_element"
            app:layout_constraintEnd_toEndOf="@+id/network_element" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/network_element"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/order_desc"
            android:hint="@string/order_desc"
            app:layout_constraintStart_toStartOf="@+id/location_name"
            app:layout_constraintEnd_toEndOf="@+id/location_name" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/location_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>