<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".OrderPageThree" android:id="@+id/order_page_three"
>
    <ImageButton
            android:src="@drawable/ic_add_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/photo_1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:contentDescription="@string/photo_1"/>
    <ImageButton
            android:src="@drawable/ic_add_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/photo_2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/photo_1" app:layout_constraintStart_toStartOf="@+id/photo_1"
            app:layout_constraintEnd_toEndOf="@+id/photo_1" android:contentDescription="@string/photo_2"/>
    <ImageButton
            android:src="@drawable/ic_add_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/photo_3"
            android:contentDescription="@string/photo_3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/photo_2"
            app:layout_constraintStart_toStartOf="@+id/photo_2" app:layout_constraintEnd_toEndOf="@+id/photo_2"/>
    <ImageButton
            android:src="@drawable/ic_add_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/photo_4"
            android:contentDescription="@string/photo_4" app:layout_constraintStart_toStartOf="@+id/photo_3"
            app:layout_constraintEnd_toEndOf="@+id/photo_3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/photo_3"/>
</androidx.constraintlayout.widget.ConstraintLayout>